// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders app component with a custom name 1`] = `
<div>
  Hello 
  Dmitriy
  !
</div>
`;

exports[`renders app component with a default name 1`] = `
<div>
  Hello 
  David
  !
</div>
`;
